# kiseki

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.control  Dockerfile.server  LICENSE  Makefile  README.md  book.toml  deny.toml  docker-compose.3node-tls.yml  docker-compose.3node.yml  docker-compose.yml  lefthook.yml
crates/kiseki-acceptance/: Cargo.toml
crates/kiseki-acceptance/tests/: acceptance.rs
crates/kiseki-advisory/: Cargo.toml
crates/kiseki-advisory/src/: budget.rs  error.rs  grpc.rs  lib.rs  lookup.rs  policy.rs  stream.rs  telemetry.rs  telemetry_bus.rs  workflow.rs
crates/kiseki-advisory/tests/: workflow_advisory_unit.rs
crates/kiseki-audit/: Cargo.toml
crates/kiseki-audit/src/: error.rs  event.rs  health.rs  lib.rs  persistent_store.rs  raft_store.rs  store.rs
crates/kiseki-audit/tests/: openraft_integration.rs
crates/kiseki-backup/: Cargo.toml
crates/kiseki-backup/src/: lib.rs  s3.rs
crates/kiseki-block/: Cargo.toml
crates/kiseki-block/src/: allocator.rs  backend.rs  error.rs  extent.rs  file.rs  journal.rs  lib.rs  probe.rs  superblock.rs  trim.rs
crates/kiseki-chunk/: Cargo.toml
crates/kiseki-chunk-cluster/: Cargo.toml
crates/kiseki-chunk-cluster/src/: auth.rs  defaults.rs  ec.rs  lib.rs  maintenance.rs  metrics.rs  peer.rs  placement.rs  repair_tracker.rs  scrub.rs  scrub_adapters.rs  scrub_scheduler.rs  server.rs
crates/kiseki-chunk-cluster/tests/: grpc_high_rtt.rs  grpc_max_message_size.rs  grpc_peer_round_trip.rs  grpc_tls_san_round_trip.rs
crates/kiseki-chunk/src/: async_ops.rs  device.rs  ec.rs  error.rs  evacuation.rs  gpu_direct.rs  lib.rs  persistent_store.rs  placement.rs  pool.rs  rebalance.rs  scrub_engine.rs  small_object_store.rs  store.rs  striping.rs
crates/kiseki-chunk/tests/: storage_failures.rs
crates/kiseki-client/: Cargo.toml
crates/kiseki-client/c-abi-shim/: abi_check.c
crates/kiseki-client/include/: kiseki_client.h
crates/kiseki-client/src/: advisory.rs  batching.rs  cache.rs  discovery.rs  error.rs  ffi.rs  fuse_daemon.rs  fuse_fs.rs  lib.rs  policy.rs  prefetch.rs  python.rs  remote_http.rs  scrub.rs  staging.rs  transport_select.rs
crates/kiseki-client/tests/: c_abi_link.rs  concurrent_fuse.rs  fuse_linux.rs  fuse_macos.rs  native_abi.rs  posix_semantics.rs
crates/kiseki-common/: Cargo.toml
crates/kiseki-common/src/: advisory.rs  chaos.rs  clock_skew.rs  error.rs  ids.rs  inline_store.rs  lib.rs  locks.rs  raft_adapter.rs  tenancy.rs  time.rs  versioning.rs
crates/kiseki-common/tests/: hlc_properties.rs
crates/kiseki-composition/: Cargo.toml
crates/kiseki-composition/src/: composition.rs  error.rs  hydrator.rs  lib.rs  log_bridge.rs  metrics.rs  multipart.rs  namespace.rs
crates/kiseki-composition/tests/: pipeline_integration.rs
crates/kiseki-control/: Cargo.toml
crates/kiseki-control/src/: advisory_policy.rs  cache_policy.rs  error.rs  federation.rs  flavor.rs  iam.rs  idp.rs  lib.rs  maintenance.rs  namespace.rs  node_lifecycle.rs  policy.rs  replication.rs  retention.rs  shard_topology.rs  storage_admin.rs  tenant.rs  threshold.rs  topology_events.rs
crates/kiseki-crypto/: Cargo.toml
crates/kiseki-crypto/src/: aead.rs  chunk_id.rs  compress.rs  envelope.rs  error.rs  hkdf.rs  keys.rs  lib.rs  mem_protect.rs  shred.rs
crates/kiseki-crypto/tests/: crypto_properties.rs  fips_usage.rs
crates/kiseki-gateway/: Cargo.toml
crates/kiseki-gateway/src/: error.rs  lib.rs  mem_gateway.rs  metrics.rs  nfs.rs  nfs3_mount.rs  nfs3_server.rs  nfs4_server.rs  nfs_auth.rs  nfs_dir.rs  nfs_lock.rs  nfs_ops.rs  nfs_security.rs  nfs_server.rs  nfs_xdr.rs  ops.rs  pnfs.rs  pnfs_ds_server.rs  portmap.rs  s3.rs  s3_auth.rs  s3_server.rs
crates/kiseki-gateway/tests/: aws_s3.rs  aws_sigv4.rs  cluster_chunk_state.rs  concurrent_nfs.rs  concurrent_s3.rs  data_path.rs  rfc1057.rs  rfc1813.rs  rfc3986.rs  rfc4506.rs  rfc5531.rs  rfc5665.rs  rfc6838.rs  rfc7530.rs  rfc7578.rs  rfc7862.rs  rfc8435.rs  rfc8881.rs  rfc9110.rs  rfc9289.rs  rpcsec_gss.rs
crates/kiseki-keymanager/: Cargo.toml
crates/kiseki-keymanager/src/: aws_provider.rs  azure_provider.rs  cache.rs  epoch.rs  error.rs  gcp_provider.rs  grpc.rs  health.rs  internal_provider.rs  lib.rs  node_identity.rs  persistent_store.rs  provider.rs  raft_store.rs  rewrap_worker.rs  rotation_monitor.rs  store.rs  vault_provider.rs
crates/kiseki-keymanager/tests/: epoch_scenarios.rs  openraft_integration.rs
crates/kiseki-log/: Cargo.toml
crates/kiseki-log/src/: auto_split.rs  compaction_worker.rs  delta.rs  error.rs  grpc.rs  lib.rs  merge.rs  persistent_store.rs  raft_shard_store.rs  raft_store.rs  shard.rs  split.rs  store.rs  traits.rs  watermark.rs
crates/kiseki-log/tests/: grpc_integration.rs  log_scenarios.rs  multi_node_raft.rs  multi_shard_transport.rs  openraft_integration.rs  raft_shard_store_topology.rs
crates/kiseki-profile/: Cargo.toml  resume.sh  run-all.sh
crates/kiseki-profile/src/: harness.rs  main.rs  protocols.rs  stats.rs
crates/kiseki-proto/: Cargo.toml  build.rs
crates/kiseki-proto/src/: lib.rs
crates/kiseki-proto/tests/: grpc_contract.rs  roundtrip.rs
crates/kiseki-raft/: Cargo.toml
crates/kiseki-raft/src/: config.rs  lib.rs  log_store.rs  mem_transport.rs  membership.rs  network.rs  node.rs  redb_log_store.rs  redb_raft_log_store.rs  tcp_transport.rs
crates/kiseki-raft/tests/: mem_log_store_test.rs  raft_wire.rs
crates/kiseki-server/: Cargo.toml
crates/kiseki-tracing/: Cargo.toml
crates/kiseki-transport/: Cargo.toml
crates/kiseki-view/: Cargo.toml
tests/e2e/: Dockerfile.fuse-client  Dockerfile.pnfs-client  Dockerfile.pnfs-client-tls  conftest.py  gen-tls-certs.sh  generate_proto.sh  pyproject.toml  test_cluster_resilience.py  test_control_plane.py  test_cross_node_replication.py  test_cross_protocol.py  test_fuse_client.py  test_log_roundtrip.py  test_multi_node.py  test_multi_node_resilience.py  test_nfs3.py  test_oidc_keycloak.py  test_perf_baseline.py  test_persistence.py  test_pnfs.py  test_s3_gateway.py  test_s3_operations.py  test_server_health.py  test_tracing.py  test_vault_kms.py
(+513 files in other folders)
