[workspace]
resolver = "2"
members = [
    "crates/kiseki-acceptance",
    "crates/kiseki-advisory",
    "crates/kiseki-audit",
    "crates/kiseki-chunk",
    "crates/kiseki-client",
    "crates/kiseki-common",
    "crates/kiseki-composition",
    "crates/kiseki-control",
    "crates/kiseki-crypto",
    "crates/kiseki-gateway",
    "crates/kiseki-keymanager",
    "crates/kiseki-log",
    "crates/kiseki-proto",
    "crates/kiseki-raft",
    "crates/kiseki-server",
    "crates/kiseki-transport",
    "crates/kiseki-view",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "2026.1.0"
license = "Apache-2.0"
repository = "https://github.com/witlox/kiseki"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic lints we disable with justification:
# - `module_name_repetitions`: domain naming (KisekiError, ChunkId) is intentional.
# - `missing_errors_doc`/`missing_panics_doc`: redundant with thiserror + error-taxonomy.md.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Domain-correctness lints elevated to deny:
float_cmp = "deny"
todo = "deny"
unimplemented = "deny"
# unwrap/expect/panic: not lint-enforced (review-enforced in production code).
# Tests and integration code use these freely. Matches pact pattern.

[workspace.dependencies]
# --- Internal crates ---
kiseki-common = { path = "crates/kiseki-common", version = "2026.1.0" }
kiseki-crypto = { path = "crates/kiseki-crypto", version = "2026.1.0" }
kiseki-proto = { path = "crates/kiseki-proto", version = "2026.1.0" }
kiseki-raft = { path = "crates/kiseki-raft", version = "2026.1.0" }
kiseki-transport = { path = "crates/kiseki-transport", version = "2026.1.0" }
kiseki-log = { path = "crates/kiseki-log", version = "2026.1.0" }
kiseki-keymanager = { path = "crates/kiseki-keymanager", version = "2026.1.0" }
kiseki-audit = { path = "crates/kiseki-audit", version = "2026.1.0" }
kiseki-chunk = { path = "crates/kiseki-chunk", version = "2026.1.0" }
kiseki-composition = { path = "crates/kiseki-composition", version = "2026.1.0" }
kiseki-view = { path = "crates/kiseki-view", version = "2026.1.0" }
kiseki-advisory = { path = "crates/kiseki-advisory", version = "2026.1.0" }
kiseki-gateway = { path = "crates/kiseki-gateway", version = "2026.1.0" }
kiseki-client = { path = "crates/kiseki-client", version = "2026.1.0" }
kiseki-control = { path = "crates/kiseki-control", version = "2026.1.0" }
kiseki-server = { path = "crates/kiseki-server", version = "2026.1.0" }

# --- Core ---
thiserror = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
zeroize = { version = "1", features = ["derive"] }
aws-lc-rs = { version = "1", features = ["alloc"] }
flate2 = "1"
x509-parser = "0.16"
libc = "0.2"
openraft = { version = "0.10.0-alpha.17", features = ["serde", "type-alias"] }

# --- Async / time ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }

# --- TLS ---
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# --- Serialization / protobuf ---
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["tls"] }
tonic-build = "0.12"

# --- Erasure coding ---
reed-solomon-erasure = "6"

# --- Testing ---
proptest = "1"
cucumber = "0.21"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
overflow-checks = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true

# Tests always run with overflow checks on.
[profile.test]
opt-level = 0
overflow-checks = true
