[package]
name = "kiseki-acceptance"
description = "BDD acceptance tests for Kiseki — cucumber-rs Gherkin runner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Test-only crate — no library.
[lib]
name = "kiseki_acceptance"
path = "tests/acceptance.rs"

[[test]]
name = "acceptance"
harness = false
path = "tests/acceptance.rs"

[dependencies]
# Domain crates under test
kiseki-common = { path = "../kiseki-common" }
kiseki-crypto = { path = "../kiseki-crypto" }
kiseki-log = { path = "../kiseki-log" }
kiseki-keymanager = { path = "../kiseki-keymanager" }
kiseki-audit = { path = "../kiseki-audit" }
kiseki-chunk = { path = "../kiseki-chunk" }
kiseki-composition = { path = "../kiseki-composition" }
kiseki-view = { path = "../kiseki-view" }
kiseki-advisory = { path = "../kiseki-advisory" }
kiseki-control = { path = "../kiseki-control" }

# BDD framework
cucumber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
