[package]
name = "kiseki-acceptance"
description = "BDD acceptance tests for Kiseki — cucumber-rs Gherkin runner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Test-only crate — no library.
[lib]
name = "kiseki_acceptance"
path = "tests/acceptance.rs"

[[test]]
name = "acceptance"
harness = false
path = "tests/acceptance.rs"

[features]
default = []
## Include slow @integration scenarios (Raft clusters, ~1s each).
## Run with: cargo test -p kiseki-acceptance --features slow-tests
slow-tests = []

[dependencies]
# Domain crates under test
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-log = { workspace = true }
kiseki-keymanager = { workspace = true }
kiseki-audit = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-view = { workspace = true }
kiseki-advisory = { workspace = true }
kiseki-control = { workspace = true }
kiseki-gateway = { workspace = true }
kiseki-transport = { workspace = true }
kiseki-client = { workspace = true }
kiseki-block = { workspace = true }
tempfile = "3"
axum = "0.7"

# BDD framework
cucumber = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# BDD step definitions are test code — relax lints.
[lints.clippy]
all = "allow"
pedantic = "allow"

[lints.rust]
missing_docs = "allow"
unused_imports = "allow"
unused_comparisons = "allow"
