[package]
name = "kiseki-acceptance"
description = "BDD acceptance tests for Kiseki — cucumber-rs Gherkin runner."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Test-only crate — no library.
[lib]
name = "kiseki_acceptance"
path = "tests/acceptance.rs"

[[test]]
name = "acceptance"
harness = false
path = "tests/acceptance.rs"

[features]
default = []
## Include slow @integration scenarios (Raft clusters, ~1s each).
## Run with: cargo test -p kiseki-acceptance --features slow-tests
slow-tests = []

[dependencies]
# Domain crates under test
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-log = { workspace = true }
kiseki-keymanager = { workspace = true }
kiseki-audit = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-view = { workspace = true }
kiseki-advisory = { workspace = true }
kiseki-control = { workspace = true }
kiseki-gateway = { workspace = true }
kiseki-transport = { workspace = true }
kiseki-client = { workspace = true, features = ["remote-nfs", "remote-http"] }
kiseki-block = { workspace = true }
kiseki-backup = { workspace = true }
kiseki-raft = { workspace = true }
tempfile = "3"
axum = "0.8"
# Cert generation for the @mtls cluster harness mode (multi-node-raft
# "tenant cert is rejected at fabric port" scenario). Same version as
# the transport crate's tls_handshake test.
rcgen = "0.14"

# BDD framework
cucumber = { workspace = true }
futures = "0.3"
tokio = { workspace = true }
uuid = { workspace = true }

# Server harness — steps talk to a running kiseki-server via network
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json"] }
tonic = { workspace = true }
kiseki-proto = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }

# Cluster harness — child processes are killed when the test binary exits
# (via prctl(PR_SET_PDEATHSIG) on Linux).
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

# BDD step definitions are test code — relax lints.
[lints.clippy]
all = "allow"
pedantic = "allow"

[lints.rust]
missing_docs = "allow"
unused_imports = "allow"
unused_comparisons = "allow"
