[package]
name = "kiseki-advisory"
description = "Workflow Advisory runtime for Kiseki: budget enforcement, telemetry, audit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
kiseki-audit = { path = "../kiseki-audit" }
kiseki-proto = { path = "../kiseki-proto" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
