[package]
name = "kiseki-advisory"
description = "Workflow Advisory runtime for Kiseki: budget enforcement, telemetry, audit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { workspace = true }
kiseki-audit = { workspace = true }
kiseki-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
