[package]
name = "kiseki-audit"
description = "Audit log for Kiseki: per-tenant event shards, append-only, watermark-tracked."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
