[package]
name = "kiseki-block"
description = "Raw block device I/O for Kiseki: DeviceBackend trait, bitmap allocator, extent management (ADR-029)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CRC32C with SSE4.2 / ARM CRC intrinsics — replaces the hand-rolled
# bit-by-bit loop that capped fabric write_chunk at ~470 MiB/s in
# release builds (2026-05-04 docker compose baseline). The 0.6 series
# auto-detects HW support at runtime and falls back to a fast software
# table on platforms without the intrinsic.
crc32c = "0.6"

[dev-dependencies]
tempfile = "3"
