[package]
name = "kiseki-chunk-cluster"
description = "Cross-node chunk replication for Kiseki: ClusteredChunkStore wraps a local chunk store and fans fragments out to peer nodes via the ClusterChunkService gRPC fabric (Phase 16a)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
uuid = { workspace = true }
