[package]
name = "kiseki-chunk-cluster"
description = "Cross-node chunk replication for Kiseki: ClusteredChunkStore wraps a local chunk store and fans fragments out to peer nodes via the ClusterChunkService gRPC fabric (Phase 16a)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
rcgen = "0.14"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { workspace = true }
