[package]
name = "kiseki-chunk"
description = "Chunk Storage for Kiseki: encrypted chunk write/read, dedup, affinity pools, GC, retention holds."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
kiseki-crypto = { path = "../kiseki-crypto" }
kiseki-keymanager = { path = "../kiseki-keymanager" }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
