[package]
name = "kiseki-chunk"
description = "Chunk Storage for Kiseki: encrypted chunk write/read, dedup, affinity pools, GC, retention holds."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-block = { workspace = true }
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kiseki-keymanager = { workspace = true }
redb = "2"
reed-solomon-erasure = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
