[package]
name = "kiseki-chunk"
description = "Chunk Storage for Kiseki: encrypted chunk write/read, dedup, affinity pools, GC, retention holds."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# NVIDIA GPUDirect Storage via cuFile (requires CUDA toolkit + nvidia-gds).
gpu-cuda = ["libc"]
# AMD ROCm GPU-direct via HIP (requires ROCm toolkit).
gpu-rocm = ["libc"]

[dependencies]
async-trait = { workspace = true }
libc = { workspace = true, optional = true }
kiseki-block = { workspace = true }
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kiseki-keymanager = { workspace = true }
redb = "2"
reed-solomon-erasure = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
