[package]
name = "kiseki-client"
description = "Native client for Kiseki: FUSE mount, fabric discovery, client-side encryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
# Both Rust consumers (rlib) and C/C++/Python wrappers (cdylib) link
# this crate. cdylib output is required for the FFI ABI link-verify
# test (ADV-PA-5).
crate-type = ["lib", "cdylib"]

[features]
default = []
ffi = []
fuse = ["fuser"]
python = ["pyo3"]

[dependencies]
kiseki-common = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-gateway = { workspace = true }
fuser = { version = "0.17", optional = true }
libc = { workspace = true }
pyo3 = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[[bin]]
name = "kiseki-client"
path = "src/bin/kiseki_client.rs"

[[test]]
name = "native_abi"
required-features = ["ffi"]

[[test]]
name = "c_abi_link"
required-features = ["ffi"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
