[package]
name = "kiseki-client"
description = "Native client for Kiseki: FUSE mount, fabric discovery, client-side encryption."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
# Both Rust consumers (rlib) and C/C++/Python wrappers (cdylib) link
# this crate. cdylib output is required for the FFI ABI link-verify
# test (ADV-PA-5).
crate-type = ["lib", "cdylib"]

[features]
default = []
ffi = []
fuse = ["fuser"]
python = ["pyo3"]
# Network attachment of FUSE/POSIX path to a running kiseki cluster.
# Adds a `RemoteHttpGateway` that implements `GatewayOps` against the
# kiseki-server S3 listener (port 9000). Off by default so the
# kiseki-client crate doesn't pull reqwest+rustls into the FFI/cdylib
# build path that downstream Python/C++ wrappers consume.
remote-http = ["reqwest", "async-trait"]
# NFSv4.1 client — connects to kiseki-server's NFS port (2049) and
# translates GatewayOps into NFSv4 COMPOUND RPCs over TCP. Uses
# XDR utilities from kiseki-gateway. ADR-023 D7.
remote-nfs = ["async-trait"]

[dependencies]
kiseki-common = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-gateway = { workspace = true }
async-trait = { version = "0.1", optional = true }
fuser = { version = "0.17", optional = true }
libc = { workspace = true }
pyo3 = { version = "0.28", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "http2"], optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[[bin]]
name = "kiseki-client"
path = "src/bin/kiseki_client.rs"

[[test]]
name = "native_abi"
required-features = ["ffi"]

[[test]]
name = "c_abi_link"
required-features = ["ffi"]

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
