[package]
name = "kiseki-common"
description = "Shared domain types for Kiseki: HLC, identifiers, errors, advisory domain surface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
