[package]
name = "kiseki-composition"
description = "Composition context for Kiseki: file/object metadata, namespaces, multipart, versioning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
kiseki-common = { workspace = true }
kiseki-log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
kiseki-view = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
