[package]
name = "kiseki-composition"
description = "Composition context for Kiseki: file/object metadata, namespaces, multipart, versioning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
kiseki-common = { workspace = true }
kiseki-log = { workspace = true }
thiserror = { workspace = true }
# tokio is needed at lib level for the hydrator's async poll + the
# Arc<tokio::sync::Mutex<CompositionStore>> handle shared with the gateway.
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
kiseki-view = { workspace = true }
proptest = { workspace = true }
uuid = { workspace = true }
