[package]
name = "kiseki-composition"
description = "Composition context for Kiseki: file/object metadata, namespaces, multipart, versioning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
kiseki-common = { workspace = true }
kiseki-log = { workspace = true }
thiserror = { workspace = true }
# tokio is needed at lib level for the hydrator's async poll + the
# Arc<tokio::sync::Mutex<CompositionStore>> handle shared with the gateway.
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Persistent CompositionStore (ADR-040): redb stores `compositions.redb`
# under KISEKI_DATA_DIR/metadata/, postcard provides deterministic
# encoding for the `Composition` value bytes, lru is the hot-tail cache.
redb = { workspace = true }
postcard = { workspace = true }
lru = { workspace = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
kiseki-view = { workspace = true }
proptest = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
