[package]
name = "kiseki-control"
description = "Control plane for Kiseki: tenancy, IAM, policy, flavor, federation, compliance."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

# ADV-3: Dependency firewall — control plane depends ONLY on kiseki-common,
# kiseki-proto, and observability shims (kiseki-tracing). No data-path
# crates (log, chunk, composition, view, gateway, client, keymanager,
# crypto, raft, transport, audit, advisory).
[dependencies]
kiseki-common = { workspace = true }
kiseki-proto = { workspace = true }
kiseki-tracing = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
aws-lc-rs = { workspace = true }
# Phase 15d (ADR-038 §D10): tokio::sync::broadcast hosts the
# TopologyEventBus that fans out drain / split / merge / composition-
# delete / key-rotation events to pNFS LayoutManagers.
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
