[package]
name = "kiseki-gateway"
description = "Protocol gateways for Kiseki: NFS and S3 protocol translation layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["nfs", "s3"]
nfs = []
s3 = []

[dependencies]
kiseki-common = { path = "../kiseki-common" }
kiseki-chunk = { path = "../kiseki-chunk" }
kiseki-composition = { path = "../kiseki-composition" }
kiseki-crypto = { path = "../kiseki-crypto" }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto", "service"] }
kiseki-transport = { path = "../kiseki-transport" }
rustls = { version = "0.23", default-features = false }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
tower = "0.5"
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { workspace = true }
