[package]
name = "kiseki-gateway"
description = "Protocol gateways for Kiseki: NFS and S3 protocol translation layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["nfs", "s3"]
nfs = []
s3 = []

[dependencies]
kiseki-common = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-crypto = { workspace = true }
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto", "service"] }
kiseki-transport = { workspace = true }
kiseki-view = { workspace = true }
rustls = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
tower = "0.5"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
uuid = { workspace = true }
