[package]
name = "kiseki-gateway"
description = "Protocol gateways for Kiseki: NFS and S3 protocol translation layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["nfs", "s3"]
nfs = []
s3 = []

[dependencies]
async-trait = { workspace = true }
kiseki-advisory = { workspace = true }
kiseki-common = { workspace = true }
kiseki-log = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-control = { workspace = true }
kiseki-crypto = { workspace = true }
aws-lc-rs = { workspace = true }
axum = "0.7"
kiseki-audit = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server-auto", "service"] }
kiseki-transport = { workspace = true }
kiseki-view = { workspace = true }
rustls = { version = "0.23", default-features = false }
serde = { version = "1", features = ["derive"] }
socket2 = "0.5"
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
tower = "0.5"
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
axum = { version = "0.7", features = ["tokio"] }
http-body-util = "0.1"
proptest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
uuid = { workspace = true }
