[package]
name = "kiseki-keymanager"
description = "System Key Manager for Kiseki: epoch management, master key rotation, health."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
kiseki-crypto = { path = "../kiseki-crypto" }
thiserror = { workspace = true }
zeroize = { workspace = true }
aws-lc-rs = { workspace = true }
futures = "0.3"
kiseki-proto = { path = "../kiseki-proto" }
kiseki-raft = { path = "../kiseki-raft" }
openraft = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
