[package]
name = "kiseki-keymanager"
description = "System Key Manager for Kiseki: epoch management, master key rotation, health."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
kms-vault = []
kms-aws = []
kms-azure = []
kms-gcp = []

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
kiseki-audit = { workspace = true }
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
aws-lc-rs = { workspace = true }
futures = "0.3"
kiseki-proto = { workspace = true }
kiseki-raft = { workspace = true }
kiseki-tracing = { workspace = true }
openraft = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
