[package]
name = "kiseki-log"
description = "Log context for Kiseki: delta ordering, Raft replication, shard lifecycle, compaction, GC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
kiseki-proto = { path = "../kiseki-proto" }
kiseki-raft = { path = "../kiseki-raft" }
futures = "0.3"
openraft = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
